# SimpleRestaurantAPI_Rust

./: .gitignore  API_SPEC.md  Cargo.toml  README.md  Rocket.toml
scripts/: SimpleRestaurantAPI.postman_collection.json
src/: logic.rs  main.rs  menu.json  models.rs  routes.rs  worker.rs
src/tests/: config.rs  logic.rs  menus.rs  mod.rs  orders.rs  routes.rs
