[package]
name = "simple_restaurant_api"
version = "0.1.0"
authors = ["Pinaki Dey <pinaki@pinakidey.com>"]
edition = "2018"


[dependencies]
rand = "0.8.3"
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["uuid"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1.2.0", features = ["full"] }
url = "2.2.1"
#rayon = "1.5.0"
#threadpool = "1.8.1"
#futures = { version = "0.3.13", features = ["executor", "std", "thread-pool"] }
#state = { version = "0.4.2", features = ["tls"] }
#lazy_static = "1.4.0"